Fixed 100vw scrollbar issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,10 @@
+body {
+    overflow-y: scroll; /* Always show vertical scrollbar */
+}
+
 .hero {
 	position: relative;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
     display: flex;
     justify-content: center;
